--- a/flex-navbar/index.css
+++ b/flex-navbar/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 10px;
+  margin: 0;
+  padding: 0;
   font-family: Verdana;
 }
 
@@ -8,6 +9,10 @@ body {
   display: flex;
   flex-direction: row;
 }
+
+/* .services {
+  margin-left: auto;
+} */
 
 .container > div {
   padding: 10px;
