--- a/dailyui/landingpage/index.css
+++ b/dailyui/landingpage/index.css
@@ -70,6 +70,8 @@ input {
     border-radius: 25px;
     width:40vw;
     height:6vh;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h1 {
