--- a/dailyui/spotify/index.css
+++ b/dailyui/spotify/index.css
@@ -1,23 +1,32 @@
 body {
-  display: flex;
   margin: 0;
   padding: 0;
-  color: white;
+  color: #b3b3b3;
   font-family: "Montserrat";
-  font-size: 14px;
+  font-size: 12px;
+}
+
+main {
+  display: flex;
 }
 
 .column-one,
 .column-three {
-  flex: 1;
   background-color: black;
 }
 
-.column-one {
-  padding-left: 20px;
+.column-three {
+  flex: 1.5;
 }
 
-.column-one div {
+.column-one {
+  flex: 1;
+
+  padding-left: 20px;
+  overflow: scroll;
+}
+
+.sidebar-content div {
   margin-top: 20px;
 }
 
@@ -27,9 +36,49 @@ body {
   padding-right: 10px;
 }
 
+.sidebar-content div:hover {
+  color: white;
+  cursor: pointer;
+}
+
 .column-two {
-  flex: 3;
+  flex: 5;
   background-color: #121212;
+}
+
+.library,
+.playlists {
+  padding-top: 10%;
+}
+
+.menu {
+  font-weight: 700;
+}
+
+.library-menu {
+  font-weight: 700;
+}
+
+main {
+  height: 90%;
+}
+
+footer {
+  background-color: #282828;
+  height: 10%;
+  display: flex;
+}
+
+.sidebar-content {
+  overflow: scroll;
+  height: 85%;
+}
+
+.sticky {
+  display: flex;
+  height: 15%;
+  align-items: center;
+  padding-left: 5%;
 }
 
 /* .column-three {
