--- a/dailyui/spotify/index.css
+++ b/dailyui/spotify/index.css
@@ -10,19 +10,51 @@ main {
   display: flex;
 }
 
-.column-one,
-.column-three {
+.column-one {
   background-color: black;
 }
 
 .column-three {
   flex: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(18, 19, 19),
+    rgb(53, 53, 52)
+  );
+}
+
+.friends-playing {
+  text-align: center;
+  padding-top: 10px;
+  font-weight: 700;
+  color: white;
+  font-size: 14px;
+}
+
+.friends-text {
+  font-weight: 700;
+  color: white;
+  font-size: 14px;
+}
+
+.friends-button {
+  text-align: center;
+  padding-top: 50px;
+}
+
+button {
+  border-radius: 25px;
+  color: white;
+  background-color: #212121;
+  width: 90%;
+  height: 30px;
 }
 
 .column-one {
   flex: 1;
-
-  /* padding-left: 20px; */
   overflow: scroll;
 }
 
@@ -139,6 +171,39 @@ footer {
 
 .settings {
   flex: 1;
+  display: flex;
+  padding-top: 12px;
+}
+
+.settings-icons {
+  flex: 1.2;
+  padding-top: 30px;
+  padding-left: 15px;
+}
+
+.settings-icons i {
+  font-size: 20px;
+  padding: 0 0 0 20;
+}
+
+.sound-bar {
+  flex: 1;
+}
+
+.sound-container {
+  width: 80px;
+  height: 4px;
+  background-color: #535353;
+  border-radius: 25px;
+  margin-top: 38px;
+  margin-left: 5px;
+}
+
+.sound-level {
+  width: 40px;
+  height: 4px;
+  background-color: #b3b3b3;
+  border-radius: 25px;
 }
 
 .play-length {
