--- a/dailyui/twitter/styles.css
+++ b/dailyui/twitter/styles.css
@@ -27,4 +27,30 @@ body {
   width: 42px;
   height: 42px;
   padding-top: 10px;
+  padding-left: 10px;
 }
+
+.menu-item {
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin-top: 15px;
+  border-radius: 25px;
+  width: 200px;
+}
+
+.menu-item:hover {
+  background-color:rgba(29, 161, 242, 0.1);
+  color:rgba(29, 161, 242, 1.00);
+}
+
+.menu-item-text {
+  font-size: 19px;
+  margin-left: 20px;
+  padding: 10px;
+}
+
+.material-icons {
+  padding: 10 0 10 10px;
+}
+
