--- a/dailyui/twitter/styles.css
+++ b/dailyui/twitter/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: #ffffff
 }
 
 .column-one {
@@ -47,7 +48,7 @@ body {
 
 .menu-item-text {
   font-size: 19px;
-  margin-left: 20px;
+  margin-left: 5px;
   padding: 10px;
 }
 
@@ -114,3 +115,151 @@ img {
   color: #8899a6;
 }
 
+.profile-header {
+  display: flex;
+  border-bottom: solid 1px rgb(56, 68, 77);
+  padding-bottom: 5px;
+}
+
+.username-text {
+  font-weight: bold;
+  font-size: 19px;
+  margin: 0;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
+.total-tweets {
+  margin: 0;
+  margin-left: 30px;
+  color: #8899a6;
+  font-size: 13px;
+}
+
+.profile-back {
+  color: rgba(29, 161, 242, 1.00);
+  margin-top: 5px;
+  margin-left: 10px;
+}
+
+.header-photo {
+  width: 100%;
+  height: 210px;
+  background-image: url('assets/bg.jpg');
+  background-size: contain;
+}
+
+.profile-user-photo {
+  height: 134px;
+  width: 134px;
+  margin-top: 135px;
+  margin-left: 10px;
+  border: solid 4px rgb(21, 32, 43);
+}
+
+.edit-button {
+  margin-left: 490px;
+  border-radius: 25px;
+  background-color: rgb(21, 32, 43);
+  color: rgba(29, 161, 242, 1.00);
+  border: solid 1px rgba(29, 161, 242, 1.00);
+  width: 110px;
+  height: 40px;
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 13px;
+}
+
+.profile-username {
+  font-weight: bold;
+  margin: 0;
+  font-size: 19px;
+}
+
+.profile-handle {
+  color: #8899a6;
+  margin: 0;
+}
+
+.user-details {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.bio-description {
+  margin-left: 20px;
+  margin-top: 20px;
+  line-height: 1.3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.home-section {
+  color: #ffffff;
+  display: flex;
+  border-bottom: solid 1px rgb(56, 68, 77);
+}
+
+.home-text {
+  padding-left: 20px;
+  font-weight: bold;
+  font-size: 19px;
+}
+
+.home-star {
+  padding-top:15px;
+  margin-left: 500px;
+  color: rgba(29, 161, 242, 1.00);
+}
+
+.whats-happening {
+  display: flex;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+.tweet-text {
+  padding-left: 15px;
+  font-size: 19px;
+  color: #8899a6;
+  margin: 0;
+  padding-top: 10px;
+}
+
+.tweet-icon {
+  color: rgba(29, 161, 242, 1.00);
+}
+
+.tweet-icons {
+  padding-left: 64px;
+  margin-top: 15px;
+  display: flex;
+}
+
+.my-tweet-button {
+  border-radius: 25px;
+  width: 80px;
+  height: 40px;
+  background-color: rgba(29, 161, 242, 1.00);
+  color: #ffffff;
+  border-style: none;
+  font-weight: bold;
+  font-size: 15px;
+  margin-left: 250px;
+  opacity: 0.5;
+}
