--- a/dailyui/twitter/styles.css
+++ b/dailyui/twitter/styles.css
@@ -192,6 +192,311 @@ img {
   line-height: 1.3;
 }
 
+.metadata {
+  display: flex;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.metadata-icon {
+  font-size: 15px !important;
+  padding: 0;
+  color: #8899a6;
+}
+
+.metadata-text {
+  vertical-align: 2;
+  margin-right: 15px;
+  color: #8899a6;
+  font-size: 15px;
+}
+
+.metadata-link {
+  color: rgba(29, 161, 242, 1.00)
+}
+
+.followers-data {
+  display: flex;
+  padding-left: 20px;
+  padding-top: 15px;
+  color: #8899a6;
+}
+
+.followers-text {
+  padding-right: 20px;
+}
+
+.bold-number {
+  font-weight: bold;
+  color: #ffffff;
+  padding-right: 3px;
+}
+
+.tweets-and-replies {
+  display: flex;
+  /* padding-left: 20px; */
+  padding-top: 40px;
+  border-bottom: solid 1px rgb(56, 68, 77);
+  justify-content: space-around;
+  padding-right: 40px;
+}
+
+.text-tweet {
+  padding-bottom: 15px;
+  border-bottom: solid 3px rgba(29, 161, 242, 1.00);
+  
+}
+
+.tweet-text-style {
+  color: #8899a6;
+  font-weight: bold;
+}
+
+.scrollable {
+  height: 100vh;
+  overflow: scroll;
+}
+
+.pinned-tweet {
+  padding-left: 40px;
+  color: #8899a6;
+  font-size: 13px;
+  padding-top: 5px;
+}
+
+.pinned-icon {
+  font-size: 13px !important;
+}
+
+.tweet-pinned {
+  vertical-align: 2;
+  padding-left: 5px;
+}
+
+.pinned-tweet-details {
+  display: flex;
+}
+
+.pinned-image {
+  margin-left: 20px;
+}
+
+.pinned-tweet-text {
+  margin-left: 13px;
+  color: #8899a6;
+}
+
+.pinned-user {
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.pinned-main {
+  color: #fff;
+  padding-top: 5px;
+  margin: 0;
+}
+
+.arrow-down {
+  font-size: 20px !important;
+  vertical-align: -4;
+  margin-left: 90px;
+  padding: 0;
+}
+
+.tweet-image {
+  margin-left: 70px;
+  margin-right: 70px;
+  border-radius: 25px;
+  height: 300px;
+  margin-top: 20px;
+  background-image: url('assets/art.jpg');
+  background-size: contain;
+}
+
+.search-twitter {
+  background-color: rgb(37, 51, 65);
+  border-radius: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+  color: #8899a6;
+  margin-top: 10px;
+}
+
+.search-icon {
+  font-size: 18px !important;
+  padding-left: 20px;
+}
+
+.search-text {
+  vertical-align: 3;
+  padding-left: 10px;
+}
+
+.image-gallery {
+  border-radius: 25px;
+  margin: 15 20 0 20px;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image {
+  height: 100px;
+  width: 109.8px;
+}
+
+.tchalla {
+  background-image: url('assets/tchalla.jpg');
+  background-size: cover;
+  border-radius: 25px 0 0 0;
+  border-right: solid 1px rgb(21, 32, 43);
+}
+
+.mbaku {
+  background-image: url('assets/mbaku.jpg');
+  background-size: cover;
+  border-right: solid 1px rgb(21, 32, 43);
+}
+
+.killmonger {
+  background-image: url('assets/killmonger.jpg');
+  background-size: cover;
+  border-radius: 0 25px 0 0;
+  /* border-right: solid 1px rgb(56, 68, 77) */
+}
+
+.nakia {
+  background-image: url('assets/nakia.jpeg');
+  background-size: cover;
+  border-radius: 0 0 0 25px;
+  border-top: solid 1px rgb(21, 32, 43);
+  border-right: solid 1px rgb(21, 32, 43);
+}
+
+.shuri {
+  background-image: url('assets/shuri.jpg');
+  background-size: cover;
+  border-right: solid 1px rgb(21, 32, 43);
+}
+
+.okoye {
+  background-image: url('assets/okoye.jpg');
+  background-size: cover;
+  border-radius: 0 0 25px 0;
+}
+
+.recommendation {
+  border-radius: 25px;
+  margin: 15 20 0 20px;
+  height: 320px;
+  background-color: rgb(25, 39, 52);
+}
+
+.trends {
+  border-radius: 25px;
+  margin: 15 20 0 20px;
+  height: 130px;
+  background-color: rgb(25, 39, 52);
+}
+
+.trending p {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.trend-text {
+  font-size: 13px;
+  color: #8899a6;
+  padding-top: 10px;
+}
+
+.trend-number {
+  padding-top: 8px;
+  color: #8899a6;
+}
+
+.trend-tag {
+  font-weight: bold;
+  padding-top: 8px;
+  font-size: 15px;
+}
+
+.you-like-text {
+  font-weight: bold;
+  font-size: 19px;
+  margin: 0;
+  padding: 15px 0 10px 20px;
+}
+
+.you-like {
+  border-bottom: solid 1px rgb(56, 68, 77)
+}
+
+.user-rec {
+  padding-top: 15px;
+  padding-left: 20px;
+  padding-bottom: 15px;
+  border-bottom: solid 1px rgb(56, 68, 77);
+  display:flex;
+}
+
+.user-rec p {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.user-rec button {
+  /* margin-left: 50px; */
+  border-radius: 25px;
+  height: 30px;
+  width: 80px;
+  margin-top: 5px;
+  background: rgb(25, 39, 52);
+  font-weight: bold;
+  font-size: 14px;
+  color: rgba(29, 161, 242, 1.00);
+  border: solid 1px rgba(29, 161, 242, 1.00);
+}
+
+.button-tchalla {
+  margin-left: 40px
+}
+
+.button-nakia {
+  margin-left: 90px;
+}
+
+.button-kill {
+  margin-left: 30px
+}
+
+.user-rec-username {
+  font-weight: bold;
+  padding-top: 3px;
+}
+
+.user-rec-handle {
+  color: #8899a6;
+  padding-top: 2px;
+}
+
+.user-rec-details {
+  display: flex;
+}
+
+.show-more {
+  font-size: 15px;
+  color: rgba(29, 161, 242, 1.00);
+  padding-left: 20px;
+}
+
+
+
+
+
+
+
 
 
 
